--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -22,7 +22,7 @@
     <div class="deets">
       <p>Set your watch by Netlify
       {% if zone %}(<a href="/timezones">{{ zone.location }}</a>){% endif %}
-      <br /><a href="https://github.com/philhawksworth/html-time">Forked</a> by <a href="https://github.com/campfighter">Campfighter</a> for some a <a href="https://github.com/dialexa">Dialexa</a> mentorship project.</p>
+      <br /><a href="https://github.com/philhawksworth/html-time">Forked</a> by <a href="https://github.com/campfighter">Steven Davis</a> for a <a href="https://github.com/dialexa">Dialexa</a> mentorship project.</p>
     </div>
   </body>
 </html>
