--- a/src/why.njk
+++ b/src/why.njk
@@ -3,26 +3,10 @@ layout: base.njk
 title: Why make this?
 ---
 <div class="prose">
-  <h1>But... but why?</h1>
-  <h2>tl;dr:</h2>
-  <p>
-    Zach Leatherman <em>made</em> me do it.
-  </p>
-  <blockquote>
-    <p>
-      free side project idea: HTML-only static site generated clock that deploys a new version to <a href="https://twitter.com/netlify">@netlify</a> every minute
-    </p>
-    <p>
-      — <a href="https://twitter.com/zachleat/status/1020034115817680896">@zachleat</a>
-    </p>
-  </blockquote>
-
+  <marquee>IN PROGRESS</marquee>
   <h2>Easy, automated deploys</h2>
   <p>
     This site is made of static HTML. There is no javascript running to detect the time in your timezone and to display it to you.
-  </p>
-  <p>
-    Instead, <a href="/">the time you see</a> is the time that the site was generated and deployed. It just so happens that building and deploying with Netlify is so easy, so frictionless, and so confident, that I felt comfortable rebuilding and deploying the site to Netlify's intelligent global CDN <em>every minute</em>.
   </p>
   <h2>Localization via the CDN</h2>
   <p>
